--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             <section id="contact">
                <div class="flex5">
-                <h2>Conatact <span>Me</span></h2>
+                <h2>Contact <span>Me</span></h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam provident dolorem sapiente esse aliquid quis vero explicabo tempora, quasi quod? Modi quod illum ipsum nesciunt.</p>
                 <div class="show">
                    <div class="grid">
